Fix typos in configs/sim/axis directory Found via `codespell -q 3 -S "*.po,*.pot,*.svg,*.ts,*.changes_es,./.git/logs,./share,./docs/man/es,./configs/attic,*_fr.*,*_es.*,README_es,./src/hal/classicladder" -L abd,alle,ans,apoints,atleast,ba,breal,bu,bulle,busses,checke,childs,collet,comando,commutated,componentes,currenty,dashs,doubleclick,dout,dum,etxt,extint,faktor,finis,fo,fpr,halp,ihs,indx,ine,inout,inport,ist,leadin,momento,mot,nce,nome,oder,ontext,ot,parm,parms,propertys,realy,rin,ro,seh,sems,ser,serie,splitted,smoe,tabl,te,tey,tre,trough,ue,ure,usin,varn,vell,wille,wont,wonte`

--- a/configs/sim/axis/vismach/5axis/table-rotary_spindle-rotary-nutating/README
+++ b/configs/sim/axis/vismach/5axis/table-rotary_spindle-rotary-nutating/README
@@ -2,7 +2,7 @@ This is a simulation configuration for a 6 axis machine with one table rotary an
 
 This simulation also includes a python remap of Gcodes for tilted workplane (TWP) functionality.
 Both the kinematic and the twp remap support nutation of the secondary rotary joints (ie A or B ) form 0 to 90°. 
-Hence this also works for the 'usual' orthogonal spindle rotary-tilt type machines by seting the nutation angle to 90°.
+Hence this also works for the 'usual' orthogonal spindle rotary-tilt type machines by setting the nutation angle to 90°.
 
 Implemented TWP functionality:
 G68.2 : defines twp using euler-angles, pitch-roll-yaw, 2-vectors, 3 points, optionally with offset in XYZ and rotation in XY
