Fix typos in Docs directory Found via `codespell -q 3 -S "*.po,*.pot,*.svg,*.ts,*.changes_es,./.git/logs,./share,./docs/man/es,./configs/attic,*_fr.*,*_es.*,README_es,./src/hal/classicladder" -L abd,alle,ans,apoints,atleast,ba,breal,bu,bulle,busses,checke,childs,collet,comando,commutated,componentes,currenty,dashs,doubleclick,dout,dum,etxt,extint,faktor,finis,fo,fpr,halp,ihs,indx,ine,inout,inport,ist,leadin,momento,mot,nce,nome,oder,ontext,ot,parm,parms,propertys,realy,rin,ro,seh,sems,ser,serie,splitted,smoe,tabl,te,tey,tre,trough,ue,ure,usin,varn,vell,wille,wont,wonte`

--- a/docs/src/gui/qtvcp-code-snippets.adoc
+++ b/docs/src/gui/qtvcp-code-snippets.adoc
@@ -1023,7 +1023,7 @@ You must parse and define what is accepted and what to do with it.
 == Gcode to read qt preferences
 Here is how to create an Oword program to read a qtdragon preference file entry and add it as a gcode parameter +
 Calling this oword will update the param 'toolToLoad' +
-This uses 'Python hot comment' to comunicate with the embeded python instance. +
+This uses 'Python hot comment' to communicate with the embedded python instance. +
 See the Remap section of the Documents for a description.
 
 [source,{ngc}]
