qtvcp -docs: add more info about class patching

--- a/docs/src/gui/qtvcp-code-snippets.adoc
+++ b/docs/src/gui/qtvcp-code-snippets.adoc
@@ -417,11 +417,17 @@ def toggle_continuous_clicked(self, state):
 
 [NOTE]
 Class patching (monkey patching) is a little like _black magic_ - so use it _only if needed_.
-
-The File manager widget is designed to load a selected program in LinuxCNC.
+The Major problem is if the widget library functions are changed during development, thw function might be broken. +
+The File manager widget is designed to load a selected program in LinuxCNC. +
 But maybe you want to print the file name first.
 
-We can "class patch" the library to _redirect the function call_.
+We can "class patch" the library to _redirect the function call_. +
+You can do this class patch inside or outside the HandlerClass instance. +
+This will change what 'self' represents in the function. +
+Outside the HanderClass, 'self' will be the patched class instance. +
+Inside the HanderClass, 'self' will be the HandlerClass instance. +
+This would change what functions/variables you can access in the function. +
+Here we show an inside the HandlerClass example: +
 In the `IMPORT SECTION` add:
 
 [source,python]
@@ -449,6 +455,7 @@ def class_patch__(self):
 +
 . _Write a custom function to replace the original_: +
   This function must have the *same signature as the original function*. +
+  'self' is the HandlerClass instance _not_ the patched class instance. +
   In this example we are still going to call the original function by using the reference to it we recorded earlier. +
   It _requires the first argument to be the widget instance_,
   which in this case is `self.w.filemanager` (the name given in the Qt Designer editor).
