--- a/docs/src/gui/axis.adoc
+++ b/docs/src/gui/axis.adoc
@@ -512,16 +512,23 @@ image::images/touchoff.png["Touch Off Window",align="center"]
 
 See also the Machine menu options: 'Touch part' and 'Touch part holder'.
 
+.Actual Position Touch Off
+An axis may be configured in the .INI file to incorporate the actual position value for an axis into the touch off calculation, either adding or subtracting this value.  This is primarily useful for machines which have a non-motorized axis such as a quill with an encoder.  When this feature is enabled for an axis, the title bar of the touch off window will indicate *(system ACTUAL)*.
+
+See <<axis:touchoff-actual>> for more information.
+
 .Tool Touch Off
 By pressing the 'Tool Touch Off' button the tool length and offsets of
 the currently loaded tool will be changed so that the current tool tip
 position matches the entered coordinate.
+
 
 .Tool Touch Off Window
 image::images/tooltouchoff.png["Tool Touch Off Window",align="center"]
 
 See also the 'Tool touch off to workpiece' and 'Tool touch off to fixture'
 options in the Machine menu.
+
 
 .Override Limits
 By pressing Override Limits, the machine will temporarily be allowed
@@ -983,6 +990,24 @@ preview on certain parts that are already working OK).
 - (AXIS,notify,the_text) Displays the_text as an info display
 
 This display can be useful in the AXIS preview when (debug,message) comments are not displayed.
+
+[[axis:touchoff-actual]]
+=== Touch Off using Actual Position
+The Touch Off feature can optionally incorporate the actual axis position value into the calculation for the offset.  This is primarily used in cases where a non-motorized axis such as the quill in a milling machine provides feedback to LinuxCNC via an encoder, but there is no motor to control movement.  This allows AXIS to provide a DRO display for such an axis with working touch off capability.
+
+This feature is enabled on an axis by altering the appropriate '[AXIS_x]' section of the .INI file.  Add an option named 'TOUCHOFF_ACTUAL' and set the value to 'PLUS' or 'MINUS' depending on how you want to apply the actual position to the offset.
+
+Example:
+
+[source,{ini}]
+----
+[AXIS_Z]
+TOUCHOFF_ACTUAL = MINUS
+----
+
+Ordinarily, only the commanded position of an axis is used to set this offset, meaning it does not work properly because non-motorized axes are never commanded to move and thus their commanded position is always 0.
+
+Touch off sends a 'G10 L20' command to the MDI to set the new offset value.  The value applied is normally just the value entered into the dialog box. When this feature is enabled, it will either add or subtract the current position value from the value entered in the dialog, depending on how it is configured.
 
 [[sec:axis-axisui-pins]]
 == Axisui(((AXIS: axisui pins)))
