--- a/docs/src/man/man9/hm2_spi.9.adoc
+++ b/docs/src/man/man9/hm2_spi.9.adoc
@@ -1,5 +1,9 @@
 = hm2_spi(9)
 
+== NOTE
+
+This driver has been superseded for most purposes by the hm2_spix driver.
+
 == NAME
 
 hm2_spi - LinuxCNC HAL driver for the Mesa Electronics SPI Anything IO
