--- a/docs/src/man/man9/hm2_spi.9.adoc
+++ b/docs/src/man/man9/hm2_spi.9.adoc
@@ -1,13 +1,9 @@
 = hm2_spi(9)
 
-== NOTE
-
-This driver has been superseded for most purposes by the hm2_spix driver.
-
 == NAME
 
-hm2_spi - LinuxCNC HAL driver for the Mesa Electronics SPI Anything IO
-boards, with HostMot2 firmware.
+hm2_spi - This driver has been superseded by the hm2_spix driver. LinuxCNC HAL
+driver for the Mesa Electronics SPI Anything IO boards, with HostMot2 firmware.
 
 == SYNOPSIS
 
@@ -56,9 +52,14 @@ https://github.com/jepler/odroid-linux/tree/odroid-3.8.13-rt[on github].
 The maximum SPI clock of the 7i90 is documented as 50MHz. Other elements
 of the data path between HAL and the 7i90 may impose other limitations.
 
+== NOTE
+
+This driver has been superseded for most purposes by the hm2_spix driver.
+
 == SEE ALSO
 
 hostmot2(9)
+hm2_spix(9)
 
 == LICENSE
 
