--- a/docs/src/man/man3/hal_add_funct_to_thread.3.adoc
+++ b/docs/src/man/man3/hal_add_funct_to_thread.3.adoc
@@ -31,10 +31,10 @@ position::
 
 == DESCRIPTION
 
-*hal_add_funct_to_thread* adds a function exported by a realtime HAL component to a realtime thread.
+The function *hal_add_funct_to_thread* adds another function that is exported by a realtime HAL component to a realtime thread.
 This determines how often and in what order functions are executed.
 
-*hal_del_funct_from_thread* removes a function from a thread.
+The function *hal_del_funct_from_thread* removes a function from a thread.
 
 == RETURN VALUE
 
