--- a/docs/src/man/man1/halshow.1.adoc
+++ b/docs/src/man/man1/halshow.1.adoc
@@ -21,16 +21,14 @@ Example: "%.5f" displays a float with 5 digits right of the decimal point
 
 == DESCRIPTION
 
-*halshow* creates a GUI interface to view and interact with a running HAL session.
-It is documented in the PDF and HTML docs much more completely than is possible in a manpage:
-https://linuxcnc.org/docs/html/hal/halshow.html[]
+The program *halshow* creates a GUI interface to view and interact with a running HAL session.
 
 == SEE ALSO
 
 linuxcnc(1)
 
-Much more information about LinuxCNC and HAL is available in the
-LinuxCNC and HAL User Manuals, found at /usr/share/doc/LinuxCNC/.
+Halshow is documented in the PDF and HTML documentation much more completely than is possible in a manpage:
+https://linuxcnc.org/docs/html/hal/halshow.html[]
 
 == HISTORY
 
