--- a/docs/src/man/man1/panelui.1.adoc
+++ b/docs/src/man/man1/panelui.1.adoc
@@ -10,7 +10,7 @@ panelui - interface buttons to LinuxCNC or HAL
 
 == DESCRIPTION
 
-*panelui* is a non-realtime component to interface buttons to LinuxCNC or HAL.
+The non-realtime component *panelui* interfaces buttons to LinuxCNC or HAL.
 It decodes MESA 7I73 style key-scan codes and calls the appropriate routine.
 It gets input from a realtime component - sampler.
 Sampler gets it's input from either the MESA 7i73 or sim_matrix_kb component.
