--- a/docs/src/man/man1/halmeter.1.adoc
+++ b/docs/src/man/man1/halmeter.1.adoc
@@ -12,7 +12,7 @@ halmeter - observe HAL pins, signals, and parameters
 
 The tool *halmeter* is used to observe HAL (Hardware Abstraction Layer) pins,
 signals, or parameters. It serves the same purpose as a multimeter does
-when working on physical systems. It is an application in its own right and
+when working on physical systems. It is an self-contained application and
 connects independently from other GUIs to HAL.
 
 == OPTIONS
