debian: Reducing lintian warnings.
* file permissions
* man page conversion fro adoc to troff

--- a/docs/src/man/man1/xhc-whb04b-6.1.adoc
+++ b/docs/src/man/man1/xhc-whb04b-6.1.adoc
@@ -581,5 +581,4 @@ Copyright (C) 2018 Raoul Rubien (github.com/rubienr) Updated for
 Linuxcnc 2020 by alkabal_free.fr.
 
 This is free software; see the source for copying conditions. There is
-NO warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR
-PURPOSE.
+NO warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
