--- a/docs/src/man/man1/tooledit.1.adoc
+++ b/docs/src/man/man1/tooledit.1.adoc
@@ -10,7 +10,7 @@ tooledit - tool table editor
 
 == DESCRIPTION
 
-*tooledit* a graphical tool table editor
+The program *tooledit* is a graphical editor for the file representing a machine's tool table.
 
 == SEE ALSO
 
@@ -35,6 +35,5 @@ Report bugs at https://github.com/LinuxCNC/linuxcnc/issues.
 
 Copyright © 2020 Andy Pugh.
 
-This is free software; see the source for copying conditions. There is
-NO warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR
-PURPOSE.
+This is free software; see the source for copying conditions.
+There is NO warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
