--- a/docs/src/man/man1/elbpcom.1.adoc
+++ b/docs/src/man/man1/elbpcom.1.adoc
@@ -6,20 +6,20 @@ elbpcom - Communicate with Mesa ethernet cards
 
 == SYNOPSIS
 
-Common options::
-`*elbpcom* [**--ip=**_IP_] [**--port=**_PORT_] [**--timeout=**_TIMEOUT_] [**--space=**_MEMSPACE_] [**--size=**_TRANSFER_SIZE_]`
+Common options: ::
+*elbpcom* [**--ip=**_IP_] [**--port=**_PORT_] [**--timeout=**_TIMEOUT_] [**--space=**_MEMSPACE_] [**--size=**_TRANSFER_SIZE_]
 
-Reading data::
-`*elbpcom* [_common options_]* [*--info*] **--address=**_ADDRESS_ **--read=**_LENGTH_`
+Reading data: ::
+*elbpcom* [_common options_] [*--info*] **--address=**_ADDRESS_ **--read=**_LENGTH_
 
-Writing data::
-`*elbpcom* [_common options_] **--address=**_ADDRESS_ **--write=**_HEXDATA_`
+Writing data: ::
+*elbpcom* [_common options_] **--address=**_ADDRESS_ **--write=**_HEXDATA_
 
-Read and decode memory space info area::
-`*elbpcom* [**--space=**_MEMSPACE_] *--read-info*`
+Read and decode memory space info area: ::
+*elbpcom* [**--space=**_MEMSPACE_] *--read-info*
 
-Sending arbitrary packets::
-`*elbpcom* [_common options_] _HEXDATA_`
+Sending arbitrary packets: ::
+*elbpcom* [_common options_] _HEXDATA_
 
 == DESCRIPTION
 
@@ -36,7 +36,7 @@ tool.
 
 If not specified, the default values are
 
-`**--ip=**_192.168.1.121_ **--port=**_27181_ **--timeout=**_.2_ **--space=**_0_ **--size=**_0_`
+**--ip=**_192.168.1.121_ **--port=**_27181_ **--timeout=**_.2_ **--space=**_0_ **--size=**_0_
 
 If the **--size** argument _TRANSFER_SIZE_ is 0, elbpcom will look up the
 preferred transfer size of the space in the space's info area.
