--- a/docs/src/man/man1/halreport.1.adoc
+++ b/docs/src/man/man1/halreport.1.adoc
@@ -12,16 +12,18 @@ halreport - creates a report on the status of the HAL
 
 *halreport*
 
-. supports components made by halcompile and numerous legacy components
+. Supports components made by halcompile and numerous legacy components
 . Known unhandled components:
-+
-  at_pid:: naming conflicts with pid, seldom used
-  boss_plc:: no manpage or docs (any users?)
-  watchdog:: seldom used (no users in-tree)
-. deprecated/obsolete components counter supply
+at_pid:: naming conflicts with pid, seldom used
+boss_plc:: no manpage or docs (any users?)
+watchdog:: seldom used (no users in-tree)
+. Deprecated/obsolete components:
+* counter
+* supply
 
-Identificaion of functions used according to pin name. Default handling
+Identification of functions used according to pin name. Default handling
 works for components that:
+
 . use names=|count= (.comp components created with halcompile)
 . have a *single* function
 
